Add content and styles

--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/sources/styles.css" />
     <title>Photo 📸</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Picture of a croissant 📸</h1>
+    <img
+      src="https://www.hogarmania.com/archivos/202101/cocina-recetas-como-hacer-croissants-cruasanes-caseros-668x400x80xX.jpg"
+      alt=""
+    />
+    <footer>
+      <a href="/" class="page-links">Homepage 🏠</a>
+      <a href="/photo.html" class="page-links">Photo 📸</a>
+      <a href="/contact.html" class="page-links">Contact 📮</a>
+    </footer>
+  </body>
 </html>
