--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/sources/styles.css" />
     <title>Contact 📮</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Contact us</h1>
+    <p>
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+    </p>
+    <footer>
+      <a href="/" class="page-links">Homepage 🏠</a>
+      <a href="/photo.html" class="page-links">Photo 📸</a>
+      <a href="/contact.html" class="page-links">Contact 📮</a>
+    </footer>
+  </body>
 </html>
