--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/sources/styles.css" />
     <title>Croissant 🥐</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>🥐 Croissanit 🥐</h1>
+      <p>
+        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+        named for its historical crescent shape. Croissants and other
+        viennoiserie are made of a layered yeast-leavened dough
+      </p>
+    </div>
+    <footer>
+      <a href="/" class="page-links">Homepage 🏠</a>
+      <a href="/photo.html" class="page-links">Photo 📸</a>
+      <a href="/contact.html" class="page-links">Contact 📮</a>
+    </footer>
+  </body>
 </html>
