--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>🥐 Croissanit 🥐</h1>
+      <h1>🥐 Croissant 🥐</h1>
       <p>
         A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
         named for its historical crescent shape. Croissants and other
