Added improvements for SEO

--- a/photo.html
+++ b/photo.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Enjoy this beautiful photo of a homemade croissant"
+    />
     <link rel="stylesheet" href="/sources/styles.css" />
-    <title>Photo 📸</title>
+    <title>Example of a beautiful croissant - Croissant.com</title>
   </head>
   <body>
     <h1>Picture of a croissant 📸</h1>
     <img
       src="https://www.hogarmania.com/archivos/202101/cocina-recetas-como-hacer-croissants-cruasanes-caseros-668x400x80xX.jpg"
-      alt=""
+      alt="Homemade croissant"
     />
     <footer>
-      <a href="/" class="page-links">Homepage 🏠</a>
-      <a href="/photo.html" class="page-links">Photo 📸</a>
-      <a href="/contact.html" class="page-links">Contact 📮</a>
+      <a href="/" class="page-links" title="Home">Homepage 🏠</a>
+      <a href="/photo.html" class="page-links" title="Photo of a croissant"
+        >Photo 📸</a
+      >
+      <a href="/contact.html" class="page-links" title="Contact Croissant.com"
+        >Contact 📮</a
+      >
     </footer>
   </body>
 </html>
