--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact croissant.com to learn more about our homemade croissants"
+    />
     <link rel="stylesheet" href="/sources/styles.css" />
-    <title>Contact 📮</title>
+    <title>Contact us! - Croissant.com</title>
   </head>
   <body>
     <h1>Contact us</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+      <a href="mailto:hello@croissant.com" title="Contact us by e-mail"
+        >hello@croissant.com</a
+      >
+      for more info
     </p>
     <footer>
-      <a href="/" class="page-links">Homepage 🏠</a>
-      <a href="/photo.html" class="page-links">Photo 📸</a>
-      <a href="/contact.html" class="page-links">Contact 📮</a>
+      <a href="/" class="page-links" title="Home">Homepage 🏠</a>
+      <a href="/photo.html" class="page-links" title="Photo of a croissant"
+        >Photo 📸</a
+      >
+      <a href="/contact.html" class="page-links" title="Contact Croissant.com"
+        >Contact 📮</a
+      >
     </footer>
   </body>
 </html>
