--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name=""description" content="Taste the best of the best croissants!">
     <link rel="stylesheet" href="/sources/styles.css" />
-    <title>Croissant 🥐</title>
+    <title>The best croissant 🥐 in the world! - Croissant.com</title>
   </head>
   <body>
     <div class="container">
@@ -17,9 +18,9 @@
       </p>
     </div>
     <footer>
-      <a href="/" class="page-links">Homepage 🏠</a>
-      <a href="/photo.html" class="page-links">Photo 📸</a>
-      <a href="/contact.html" class="page-links">Contact 📮</a>
+      <a href="/" class="page-links" title="Home">Homepage 🏠</a>
+      <a href="/photo.html" class="page-links" title="Photo of a croissant">Photo 📸</a>
+      <a href="/contact.html" class="page-links" title="Contact Croissant.com">Contact 📮</a>
     </footer>
   </body>
 </html>
